# actix-firebase-auth

./: Cargo.toml  README.md
actix-firebase-auth/: Cargo.toml
actix-firebase-auth/src/: lib.rs  structs.rs
examples/actix-basic/: Cargo.toml
examples/actix-custom-claims/: Cargo.toml
