[package]
name = "actix-firebase-auth"
version = "0.1.0"
authors = ["Pravez <paul.ravezb@proton.me>"]
homepage = "https://github.com/Pravez/actix-firebase-auth"
repository = "https://github.com/Pravez/actix-firebase-auth.git"
description = "Firebase authentication extractor for Actix Web"
keywords = ["firebase", "actix", "web", "framework", "authentication"]
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"
readme = "../README.md"

[lib]
name = "actix_firebase_auth"
path = "src/lib.rs"

[features]
apistos = ["dep:apistos"]

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
apistos = { version = "0.3.6", optional = true }
